Fixed nav overflow issues

--- a/src/organisms/holiday-result/holiday-result.scss
+++ b/src/organisms/holiday-result/holiday-result.scss
@@ -21,7 +21,6 @@
 }
 
 .c-holiday-result__card {
-  width: 100%;
   min-height: 500px;
   position: relative;
   background-size: cover;
